Se sube versión con un adelanto del login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,4 @@
     <span>Services</span>
   </div>
 </mat-toolbar>
-  Esto es una prueba.
-<app-authentication></app-authentication>
+<router-outlet></router-outlet>
