Avance de la pantalla de solicitud de crédito

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,16 +13,19 @@
         <span>Validacion dactilosc&oacute;pica</span>
       </button>
       <button mat-menu-item>
+        <mat-icon>phone_in_talk</mat-icon>
+        <span>Verificar Referencias</span>
+      </button>
+      <button mat-menu-item>
         <mat-icon>find_replace</mat-icon>
         <span>Validar Cr&eacute;dito</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Logout</span>
       </button>
     </mat-menu>
   </div>
   <div>Banco de Procesos</div>
-  <div>
-    <span>Home</span>
-    <span>About</span>
-    <span>Services</span>
-  </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
