--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,17 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.button-caption {
+  display: inline-block;
+  padding-left: 6px;
+}
+
+.button-section {
+  text-align: right;
+}
+
+.style-text {
+  width: 20%;
+  padding: 5px 20px;
+}
