--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,6 +1,6 @@
-<mat-grid-list cols="3">
-  <mat-grid-tile></mat-grid-tile>
-  <mat-grid-tile>
+<mat-grid-list cols="3" rowHeight="100%" gutterSize="0">
+  <mat-grid-tile class="fondo"></mat-grid-tile>
+  <mat-grid-tile class="fondo">
     <div fxLayout="row" class="container" fxLayoutAlign="center center">
       <form #authForm="ngForm" name="authForm">
         <mat-card>
@@ -36,5 +36,5 @@
       </form>
     </div>
   </mat-grid-tile>
-  <mat-grid-tile></mat-grid-tile>
+  <mat-grid-tile class="fondo"></mat-grid-tile>
 </mat-grid-list>
