--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,17 @@
       <mat-icon>menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="login()">
+      <button mat-menu-item (click)="navigate('login')">
         <mat-icon>vpn_key</mat-icon>
         <span>Login</span>
       </button>
-      <button mat-menu-item (click)="goRequestForm()" [disabled]="isDisabled">
+      <button mat-menu-item (click)="navigate('solicitud')" [disabled]="isDisabled">
         <mat-icon>queue_play_next</mat-icon>
         <span>Solicitar Cr&eacute;dito</span>
+      </button>
+      <button mat-menu-item [disabled]="isDisabled" (click)="navigate('validar')">
+        <mat-icon>find_replace</mat-icon>
+        <span>Validar Cr&eacute;dito</span>
       </button>
       <button mat-menu-item [disabled]="isDisabled">
         <mat-icon>fingerprint</mat-icon>
@@ -20,11 +24,7 @@
         <mat-icon>phone_in_talk</mat-icon>
         <span>Verificar Referencias</span>
       </button>
-      <button mat-menu-item [disabled]="isDisabled">
-        <mat-icon>find_replace</mat-icon>
-        <span>Validar Cr&eacute;dito</span>
-      </button>
-      <button mat-menu-item (click)="exitApp()" [disabled]="isDisabled">
+      <button mat-menu-item (click)="navigate('login')" [disabled]="isDisabled">
         <mat-icon>exit_to_app</mat-icon>
         <span>Logout</span>
       </button>
