--- a/src/app/component/realizar-encuesta/realizar-encuesta.component.html
+++ b/src/app/component/realizar-encuesta/realizar-encuesta.component.html
@@ -4,7 +4,7 @@
     <mat-card class="example-card">
       <mat-card-header>
         <mat-card-title>
-          <h2>Solciitudes para Validaci&oacute;n Dactiloscopica</h2>
+          <h2>Realizar Encuesta de Satisfacci&oacute;n</h2>
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
@@ -34,8 +34,8 @@
             <th mat-header-cell *matHeaderCellDef class="head-table">Ejecutar</th>
             <td mat-cell *matCellDef="let t">
               <button mat-button color="accent" (click)="validar(t)">
-                <mat-icon>fingerprint</mat-icon>
-                <span class="button-caption">Validar Huellas</span>
+                <mat-icon>poll</mat-icon>
+                <span class="button-caption">Realizar Encuesta</span>
               </button>
             </td>
           </ng-container>
