--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,11 @@ body {
   padding: 5px 20px;
 }
 
+.style-text2 {
+  width: 80%;
+  padding: 5px 20px;
+}
+
 .number-input {
   text-align: right;
 }
